[gd_scene load_steps=17 format=2]

[ext_resource path="res://Intro.gd" type="Script" id=1]
[ext_resource path="res://art/jury/get_spookin1.png" type="Texture" id=2]
[ext_resource path="res://art/jury/jury3.png" type="Texture" id=3]
[ext_resource path="res://art/jury/jury1.png" type="Texture" id=4]
[ext_resource path="res://art/jury/get_spookin2.png" type="Texture" id=5]
[ext_resource path="res://art/jury/jury4.png" type="Texture" id=6]
[ext_resource path="res://art/jury/instructions1.png" type="Texture" id=7]
[ext_resource path="res://art/jury/instructions2.png" type="Texture" id=8]
[ext_resource path="res://art/jury/jury2.png" type="Texture" id=9]
[ext_resource path="res://music/menu.ogg" type="AudioStream" id=10]
[ext_resource path="res://music/play_button.ogg" type="AudioStream" id=11]

[sub_resource type="Animation" id=1]
resource_name = "fade in"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade out"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="AnimatedTexture" id=4]
frames = 2
fps = 2.0
frame_0/texture = ExtResource( 2 )
frame_1/texture = ExtResource( 5 )
frame_1/delay_sec = 0.0

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 9 ), ExtResource( 3 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 1.7
} ]

[node name="Intro" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/fade in" = SubResource( 1 )
"anims/fade out" = SubResource( 2 )

[node name="Instructions" type="AnimatedSprite" parent="."]
z_index = 1
frames = SubResource( 3 )
frame = 1
speed_scale = 0.9
playing = true
centered = false

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 486.0
margin_top = 624.0
margin_right = 1021.0
margin_bottom = 802.0
texture_normal = SubResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickSound" type="AudioStreamPlayer" parent="TextureButton"]
stream = ExtResource( 11 )

[node name="Node2D" type="Node2D" parent="."]
z_index = 50

[node name="ColorRect" type="ColorRect" parent="Node2D"]
margin_right = 1500.0
margin_bottom = 800.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jury" type="AnimatedSprite" parent="."]
z_index = -1
frames = SubResource( 5 )
frame = 3
playing = true
centered = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -10.0
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="button_up" from="TextureButton" to="." method="get_spookin"]
